@@ -20,13 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 141)
-(Parent-Version lpmud 3-3 140)
-(Version-Log "Corrected a crasher in set_this_object().
-The input escape character can now be configured at compile time.")
+(Project-Version lpmud 3-3 142)
+(Parent-Version lpmud 3-3 141)
+(Version-Log "Corrected a wrongly initialized variable in say().")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 14 Dec 2001 22:51:46 -0700")
+(Checkin-Time "Wed, 19 Dec 2001 20:50:28 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -59,7 +58,7 @@ The input escape character can now be configured at compile time.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.4 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.33 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.204 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.205 644))
   (HISTORY (lpmud/f/49_HISTORY 1.228 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -75,11 +74,12 @@ The input escape character can now be configured at compile time.")
   (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.23 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.3 644))
 
-  (src/settings/README (lpmud/C/22_README 1.14.1.7 644))
+  (src/settings/README (lpmud/C/22_README 1.14.1.8 644))
   (src/settings/default (lpmud/C/23_default 1.13.1.5.1.11 744))
   (src/settings/native (lpmud/C/9_native 1.5 744))
   (src/settings/compat (lpmud/C/10_compat 1.6 744))
   (src/settings/alatia (lpmud/J/27_alatia 1.3 744))
+  (src/settings/aoh (lpmud/Q/10_aoh 1.1 644))
   (src/settings/avalon (lpmud/D/9_avalon 1.3.1.2.1.2 744))
   (src/settings/bat (lpmud/Q/5_bat 1.1 644))
   (src/settings/beutelland (lpmud/N/34_beutelland 1.1 744))
@@ -157,7 +157,7 @@ The input escape character can now be configured at compile time.")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.13 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.51 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.52 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.3 644))
   (src/parser.c (lpmud/L/13_parser.c 1.1 644))
