@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+19-Dec-2001 (Lars Duening)  (3.3.142)
+    - (object.c) Efun say(): one variable was initialized wrongly,
+         occasionally causing the driver to crash (reported by Nostradamus).
+
 14-Dec-2001 (Lars Duening)  (3.3.141)
     - (interpret.c) Efun set_this_object() queried the master and
          simul-efun object without checking if they actually exist.
